* Changed: Replaced fixed task-title cropping with css-text-overflow behaviour

--- a/asset/css/task.scss
+++ b/asset/css/task.scss
@@ -70,6 +70,7 @@ div.task {
 
 			.projectName {
 				margin-left:5px;
+				text-overflow: ellipsis;
 			}
 		}
 	}
